--- a/Uppgift_3_OOP/Uppgift_3_OOP.csproj
+++ b/Uppgift_3_OOP/Uppgift_3_OOP.csproj
@@ -36,6 +36,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Person.cs" />
+    <Compile Include="Animal.cs" />
+    <Compile Include="Horse.cs" />
+    <Compile Include="Hedgehog.cs" />
+    <Compile Include="Dog.cs" />
+    <Compile Include="Worm.cs" />
+    <Compile Include="Bird.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
