CustomExcpetion class for testing UserError class

--- a/Uppgift_3_OOP/Uppgift_3_OOP.csproj
+++ b/Uppgift_3_OOP/Uppgift_3_OOP.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Swan.cs" />
     <Compile Include="Stork.cs" />
     <Compile Include="Cat.cs" />
+    <Compile Include="CustomException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
