--- a/Uppgift_3_OOP/Uppgift_3_OOP.csproj
+++ b/Uppgift_3_OOP/Uppgift_3_OOP.csproj
@@ -33,7 +33,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnimalRepository.cs" />
+    <Compile Include="Repository.cs" />
     <Compile Include="BirdError.cs" />
     <Compile Include="Dog.cs" />
     <Compile Include="DogError.cs" />
@@ -47,7 +47,6 @@
     <Compile Include="SwanError.cs" />
     <Compile Include="TextInputError.cs" />
     <Compile Include="UserError.cs" />
-    <Compile Include="UserErrorsRepository.cs" />
     <Compile Include="Worm.cs" />
     <Compile Include="Bird.cs" />
     <Compile Include="Flamingo.cs" />
